fixing add button and scrollbar

--- a/src/components/Items/style.css
+++ b/src/components/Items/style.css
@@ -1,5 +1,5 @@
 .container_list {
-  max-height: 250px;
+  max-height: 350px;
   width: 350px;
   margin: 0 auto;
   margin-bottom: 8px;
